--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
         ALPINE_SERVER: 192.168.11.200
     ports:
       - 8080:8080
+    volumes:
+      - npm:/npm
 
 volumes:
   alpine:
