--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - alpine:/usr/share/nginx/html/alpine
       - ./conf.d:/etc/nginx/conf.d
-    restart: ${RESTART:-none}
+    restart: ${RESTART:-no}
 
   alpine:
     build:
@@ -17,7 +17,7 @@ services:
         ALPINE_SERVER: 192.168.11.200
     volumes:
       - alpine:/alpine
-    restart: ${RESTART:-none}
+    restart: ${RESTART:-no}
 
   pip:
     build:
@@ -28,7 +28,7 @@ services:
       - 3141:3141
     volumes:
       - pip:/pip
-    restart: ${RESTART:-none}
+    restart: ${RESTART:-no}
 
   npm:
     build:
@@ -39,7 +39,7 @@ services:
       - 8080:8080
     volumes:
       - npm:/npm
-    restart: ${RESTART:-none}
+    restart: ${RESTART:-no}
 
 volumes:
   alpine:
