空文字で動作するように

--- a/sample/Dockerfile
+++ b/sample/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.8
 
-ARG ALPINE_SERVER=dl-cdn.alpinelinux.org
+ARG ALPINE_SERVER=""
 
 ARG PIP_TRUSTED_HOST
 ARG PIP_INDEX_URL
@@ -8,10 +8,14 @@ ARG PIP_INDEX_URL
 ARG NPM_PROXY=""
 
 RUN set -eux \
-    &&  sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_SERVER}/" /etc/apk/repositories \
+    &&  if [[ -n "${ALPINE_SERVER}" ]]; then \
+          sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_SERVER}/" /etc/apk/repositories; \
+        fi \
     &&  apk add python3 nodejs-npm \
     &&  pip3 install --no-cache-dir requests \
-    &&  if [[ -n "${NPM_PROXY}" ]]; then npm config set proxy       $NPM_PROXY ; fi \
-    &&  if [[ -n "${NPM_PROXY}" ]]; then npm config set https-proxy $NPM_PROXY ; fi \
-    &&  if [[ -n "${NPM_PROXY}" ]]; then npm config set strict-ssl  false ; fi \
+    &&  if [[ -n "${NPM_PROXY}" ]]; then \
+          npm config set proxy       $NPM_PROXY; \
+          npm config set https-proxy $NPM_PROXY; \
+          npm config set strict-ssl  false; \
+        fi \
     &&  npm install -g vue webpack
